# lf-avp-demo

./: .gitignore  LICENSE  README.md  extract-timestamps.py
.github/workflows/: ci.yml
lf-data/: extract-timestamps-correct-seq-id.py  extract-timestamps-with-seq-id.py  extract-timestamps-without-seq-id.py
lf-data/correct-seq-id/: log-lf-2022-4-3-18-46.txt  log-lf-2022-4-3-19-12.txt  log-lf-2022-4-3-19-22.txt  log-lf-2022-4-3-19-33.txt  log-lf-2022-4-3-19-39.txt  log-lf-2022-4-3-19-43.txt  log-lf-2022-4-4-11-03.txt  log-lf-2022-4-4-11-08.txt  log-lf-2022-4-4-12-34.txt
lf-data/correct-seq-id-packaged-centralized/: log-lf-2022-4-5-11-50.txt  log-lf-2022-4-5-11-52.txt  log-lf-2022-4-5-11-55.txt  log-lf-2022-4-5-11-57.txt  log-lf-2022-4-5-12-03.txt  log-lf-2022-4-5-12-05.txt  log-lf-2022-4-5-12-10.txt  log-lf-2022-4-5-12-13.txt  log-lf-2022-4-5-12-15.txt  log-lf-2022-4-5-12-18.txt  log-lf-2022-4-5-12-20.txt
lf-data/correct-seq-id-packaged-decentralized/: log-lf-2022-4-4-14-59.txt  log-lf-2022-4-4-15-05.txt  log-lf-2022-4-4-15-06.txt  log-lf-2022-4-4-15-08.txt  log-lf-2022-4-4-15-10.txt  log-lf-2022-4-5-11-00.txt  log-lf-2022-4-5-11-03.txt  log-lf-2022-4-5-11-04.txt  log-lf-2022-4-5-11-07.txt  log-lf-2022-4-5-11-09.txt  log-lf-2022-4-5-11-10.txt  log-lf-2022-4-5-11-12.txt
lf-data/correct-seq-id-packaged-physical/: log-lf-2022-4-3-18-48.txt  log-lf-2022-4-3-19-05.txt  log-lf-2022-4-3-19-14.txt  log-lf-2022-4-3-19-17.txt  log-lf-2022-4-3-19-18.txt  log-lf-2022-4-3-19-20.txt  log-lf-2022-4-3-19-24.txt  log-lf-2022-4-3-19-35.txt  log-lf-2022-4-3-19-37.txt  log-lf-2022-4-3-19-41.txt  log-lf-2022-4-3-19-44.txt  log-lf-2022-4-3-19-46.txt  log-lf-2022-4-3-19-48.txt  log-lf-2022-4-3-19-50.txt  log-lf-2022-4-3-19-52.txt  log-lf-2022-4-3-19-53.txt  log-lf-2022-4-3-19-55.txt  log-lf-2022-4-3-19-57.txt  log-lf-2022-4-3-19-59.txt  log-lf-2022-4-4-11-00.txt  log-lf-2022-4-4-12-30.txt  log-lf-2022-4-4-12-32.txt
lf-data/packaged-physical/: log-lf-2022-4-3-10-24.txt
lf-data/packaged-physical-no-global-planner-timer/: log-lf-2022-4-3-11-28.txt
lf-data/with-seq-id/: extract-timestamps.py  log-lf-2022-3-29-20-15.txt  log-lf-2022-3-29-20-26.txt  log-lf-2022-3-29-20-45.txt  log-lf-2022-3-29-20-51.txt  log-lf-2022-3-30-10-46.txt  log-lf-2022-3-30-10-54.txt  log-lf-2022-3-30-10-56.txt
lf-data/with-seq-id-physical-decentralized/: log-lf-2022-3-30-17-43.txt  log-lf-2022-3-30-17-46.txt  log-lf-2022-3-30-17-51.txt  log-lf-2022-3-30-17-54.txt  log-lf-2022-3-30-17-56.txt
lf-data/with-seq-id-physical-decentralized-workers-1/: extract-timestamps.py  log-lf-2022-3-31-12-55.txt
lf-data/with-seq-id-right-order/: log-lf-2022-3-30-10-40.txt  log-lf-2022-3-30-10-43.txt  log-lf-2022-3-30-10-53.txt
lf-data/with-seq-id-workers-1/: log-lf-2022-3-31-13-03.txt
lf-data/without-seq-id/: log-lf-2022-3-29-00-26.txt  log-lf-2022-3-29-00-32.txt  log-lf-2022-3-29-00-35.txt  log-lf-2022-3-29-00-43.txt  log-lf-2022-3-29-00-46.txt  log-lf-2022-3-29-00-50.txt
src/: Autoware.lf  AutowarePackaged.lf  AutowarePackagedDecentralized.lf  AutowarePackagedPhysical.lf  AutowarePhysical.lf  README.md  filter_and_transform_main.lf  point_cloud_fusion_main.lf
src/behavior_planner/: behavior_planner_main.lf
src/behavior_planner/include/: CMakeListsExtension.txt  package.xml
src/euclidean_cluster_detector/: euclidean_cluster_detector_main.lf
src/filter_and_transform/: filter_and_transform_main.lf  filter_and_transform_timer_main.lf
src/global_planner/: global_planner_main.lf  global_planner_timer_main.lf
src/include/: CMakeListsExtension.txt  constants.hpp  package.xml  utils.hpp
src/lane_planner/: lane_planner_main.lf
src/lane_planner/include/: CMakeListsExtension.txt  package.xml
src/lanelet2_map_provider/: lanelet2_map_provider_main.lf
src/lgsvl_interface/: lgsvl_interface_main.lf  lgsvl_interface_timer_main.lf
src/mpc_controller/: mpc_controller_main.lf
src/ndt_map_publisher/: ndt_map_publisher_main.lf
src/object_collision_estimator/: object_collision_estimator_main.lf
src/off_map_obstacles_filter/: off_map_obstacles_filter_main.lf
src/off_map_obstacles_filter/include/: CMakeListsExtension.txt  package.xml
src/p2d_ndt_localizer/: p2d_ndt_localizer_main.lf
src/parking_planner/: parking_planner_main.lf
src/point_cloud_fusion/: point_cloud_fusion_main.lf
src/ray_ground_classifier/: ray_ground_classifier_main.lf
src/robot_state_publisher/: robot_state_publisher_main.lf
src/rviz/: rviz_main.lf
src/voxel_grid_downsampler/: voxel_grid_downsampler_main.lf
tests/src/: euclidean_cluster_detector_test.lf  global_planner_test.lf  lane_planner_test.lf  lgsvl_interface_test.lf  mpc_controller_test.lf  object_collision_estimator_test.lf  off_map_obstacles_filter_test.lf  p2d_ndt_localizer_test.lf  parking_planner_test.lf  point_cloud_fusion_test.lf  pointcloud.lf  ray_ground_classifier_test.lf  voxel_grid_downsampler_test.lf
(+34 files in other folders)
