<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lane_planner_main</name>
    <version>1.0.0</version>
    <description>lane planner node</description>
    <maintainer email="opensource@apex.ai">Apex.AI</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>

    <depend>ndt_nodes</depend>
    <depend>ndt</depend>
    <depend>autoware_auto_common</depend>
    <depend>had_map_utils</depend>
    <depend>sensor_msgs</depend>
    <depend>time_utils</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>lanelet2_core</depend>

    <build_depend>eigen</build_depend>

    <build_export_depend>eigen</build_export_depend>

    <exec_depend>ament_index_python</exec_depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_index_python</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>autoware_testing</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>