<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>off_map_obstacles_filter_main</name>
    <version>1.0.0</version>
    <description>off map obstacles filter</description>
    <maintainer email="opensource@apex.ai">Apex.AI</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>

	
    <depend>autoware_auto_common</depend>
    <depend>autoware_auto_msgs</depend>
    <depend>lanelet2_core</depend>
    <depend>lanelet2_map_provider</depend>
    <depend>geometry_msgs</depend>
    <depend>had_map_utils</depend>
    <depend>tf2_ros</depend>
    <depend>off_map_obstacles_filter</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>visualization_msgs</depend>


    <build_depend>eigen</build_depend>
    <build_depend>autoware_auto_common</build_depend>

    <build_export_depend>eigen</build_export_depend>

    <exec_depend>ament_index_python</exec_depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_index_python</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>autoware_testing</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
